Add locations api support in backend
Also add bounding box calculation in front-end so we can request currently visible region.
